updated name of notebook

--- a/frequency_adjacency/look_at_all_adjacent_frequencies.ipynb
+++ b/frequency_adjacency/look_at_all_adjacent_frequencies.ipynb
@@ -267,23 +267,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30281022 hits had another hit within 1000Hz out of 31208910 hits (97.02684906329635%)\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"{num_hits_with_associated_hit} hits had another hit within {1000}Hz out of {len(first_source)} hits ({num_hits_with_associated_hit / len(first_source) * 100}%)\")"
+    "print(f\"{num_hits_with_associated_hit} hits had another hit within {1000}Hz out of {len(df)} hits ({num_hits_with_associated_hit / len(df) * 100}%)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12854493 hits had another hit within 0Hz out of 31208910 hits (41.18853558166562%)\n"
+     ]
+    }
+   ],
    "source": [
     "# See how many hits did vs. didn't have another hit at exactly the same frequency\n",
     "same_frequency = find_collisions_at_threshold(0)\n",
     "num_same_frequency = len(np.unique(np.concatenate(same_frequency.nonzero())))\n",
-    "print(f\"{num_same_frequency} hits had another hit within {0}Hz out of {len(first_source)} hits ({num_same_frequency / len(first_source) * 100}%)\")"
+    "print(f\"{num_same_frequency} hits had another hit within {0}Hz out of {len(df)} hits ({num_same_frequency / len(df) * 100}%)\")"
    ]
   },
   {
