Moved work to gpu1 and finalized find_SARFI.py

--- a/messing_around/messing_around.ipynb
+++ b/messing_around/messing_around.ipynb
@@ -40,14 +40,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in file\n",
-    "filename = \"/datax/scratch/nstieg/25GHz_higher.pkl\"\n",
-    "df = pd.read_pickle(filename)\n",
-    "# df = df[0:99999] # Just deal with first 100k elements of big file"
+    "# Read in the data\n",
+    "\n",
+    "# Check which server we're on (in case the data is in different places on different servers)\n",
+    "import socket\n",
+    "hostname = socket.gethostname()\n",
+    "\n",
+    "# Get paths to data\n",
+    "if hostname == \"blpc1\" or hostname == \"blpc2\":\n",
+    "    full_dataset_path = \"/datax/scratch/nstieg/25GHz_higher.pkl\"\n",
+    "    coherent_dataset_path = \"/datax/scratch/nstieg/25GHz_higher_coherent.pkl\"\n",
+    "    incoherent_dataset_path = \"/datax/scratch/nstieg/25GHz_higher_incoherent.pkl\"\n",
+    "elif hostname == \"cosmic-gpu-1\":\n",
+    "    full_dataset_path = \"/mnt/cosmic-gpu-1/data0/nstiegle/25GHz_higher.pkl\"\n",
+    "else:\n",
+    "    raise Exception(\"Data path not known\")\n",
+    "\n",
+    "# Read in data\n",
+    "# coherent = pd.read_pickle(coherent_dataset_path)\n",
+    "# incoherent = pd.read_pickle(incoherent_dataset_path)\n",
+    "df = pd.read_pickle(full_dataset_path)"
    ]
   },
   {
@@ -2686,7 +2702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
