--- a/stamps/investigate_file_uris.ipynb
+++ b/stamps/investigate_file_uris.ipynb
@@ -10,7 +10,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "from scipy.sparse import csr_array\n",
     "from scipy.sparse import lil_array\n",
     "from scipy.sparse import save_npz\n",
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +32,15 @@
     "\n",
     "# Get paths to data\n",
     "if hostname == \"blpc1\" or hostname == \"blpc2\":\n",
-    "    full_dataset_path = \"/datax/scratch/nstieg/25GHz_higher.pkl\"\n",
-    "    coherent_dataset_path = \"/datax/scratch/nstieg/25GHz_higher_coherent.pkl\"\n",
-    "    incoherent_dataset_path = \"/datax/scratch/nstieg/25GHz_higher_incoherent.pkl\"\n",
+    "    data_path = \"/datax/scratch/nstieg/\"\n",
+    "elif hostname == \"cosmic-gpu-1\":\n",
+    "    data_path = \"/mnt/cosmic-gpu-1/data0/nstiegle/\"\n",
     "else:\n",
     "    raise Exception(\"Data path not known\")\n",
+    "\n",
+    "full_dataset_path = data_path + \"25GHz_higher.pkl\"\n",
+    "coherent_dataset_path = data_path + \"25GHz_higher_coherent.pkl\"\n",
+    "incoherent_dataset_path = data_path + \"25GHz_higher_incoherent.pkl\"\n",
     "\n",
     "# Read in data\n",
     "# coherent = pd.read_pickle(coherent_dataset_path)\n",
@@ -57,6 +60,19 @@
     "    extension = filename.split('.')[-1]\n",
     "    if extension != \"hits\":\n",
     "        print(file_uri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's get all the hits which correspond to one stamp file\n",
+    "first_stamp = df[\"file_uri\"][0]\n",
+    "in_first_stamp = df[df[\"file_uri\"] == first_stamp].reset_index(drop=True)\n",
+    "in_first_stamp.shape\n",
+    "in_first_stamp.to_csv(\"/home/nstiegle/BL-COSMIC-2024-proj/stamps/hits_in_first_stamp.csv\", index=False)"
    ]
   },
   {
@@ -83,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
