--- a/stamps/make_representative_sample_of_stamps.ipynb
+++ b/stamps/make_representative_sample_of_stamps.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "# import seaborn as sns\n",
     "from scipy.sparse import csr_array\n",
     "from scipy.sparse import lil_array\n",
     "from scipy.sparse import save_npz\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +59,8 @@
     "    full_dataset_path = \"/datax/scratch/nstieg/25GHz_higher.pkl\"\n",
     "    coherent_dataset_path = \"/datax/scratch/nstieg/25GHz_higher_coherent.pkl\"\n",
     "    incoherent_dataset_path = \"/datax/scratch/nstieg/25GHz_higher_incoherent.pkl\"\n",
+    "elif hostname == \"cosmic-gpu-1\":\n",
+    "    full_dataset_path = \"/mnt/cosmic-gpu-1/data0/nstiegle/25GHz_higher.pkl\"\n",
     "else:\n",
     "    raise Exception(\"Data path not known\")\n",
     "\n",
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,17 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4703\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# So get data from each FOV recorded\n",
     "by_day = df.groupby(\"tstart\")"
@@ -112,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = os.path.expanduser(\"~\") + \"/BL-COSMIC-2024-proj/stamps/representative_samples/\"\n",
+    "reduced_df.to_csv(path + \"1in25_targets.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -147,41 +151,80 @@
    "source": [
     "# Save out the file_uri's so the script can run on them on the cosmic server\n",
     "# start with just the first 100 to test\n",
-    "test_df = reduced_df[:100]\n",
+    "test_df = reduced_df[:100].reset_index(drop=True)\n",
     "print(test_df.shape)\n",
-    "cols_to_save = [\"id\", \"file_uri\", \"file_local_enumeration\"]\n",
+    "cols_to_save = [\"id\", \n",
+    "                \"file_uri\", \n",
+    "                \"file_local_enumeration\",\n",
+    "                \"tuning\",\n",
+    "                \"tstart\",\n",
+    "                \"signal_frequency\",\n",
+    "                \"signal_drift_rate\",\n",
+    "                \"signal_snr\",\n",
+    "                \"start_channel\",\n",
+    "                \"signal_power\",\n",
+    "                \"signal_incoherent_power\"]\n",
     "\n",
     "# Save data\n",
-    "path = \"/home/nstieg/BL-COSMIC-2024-proj/stamps/\"\n",
+    "path = os.path.expanduser(\"~\") + \"/\" + \"BL-COSMIC-2024-proj/stamps/\"\n",
     "test_df[cols_to_save].to_csv(path + \"file_info.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/cosmic-storage-2/data1/vla_target/23A-362.sb43789194.eb44583327.60212.544836180554/23A-362.sb43789194.eb44583327.60212.544836180554.9.1/23A-362.sb43789194.eb44583327.60212.544836180554.9.1.AC.C640.0000.raw.seticore.hits\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Index(['id', 'beam_id', 'observation_id', 'tuning', 'subband_offset',\n",
-       "       'file_uri', 'file_local_enumeration', 'signal_frequency',\n",
-       "       'signal_index', 'signal_drift_steps', 'signal_drift_rate', 'signal_snr',\n",
-       "       'signal_coarse_channel', 'signal_beam', 'signal_num_timesteps',\n",
-       "       'signal_power', 'signal_incoherent_power', 'source_name', 'fch1_mhz',\n",
-       "       'foff_mhz', 'tstart', 'tsamp', 'ra_hours', 'dec_degrees',\n",
-       "       'telescope_id', 'num_timesteps', 'num_channels', 'coarse_channel',\n",
-       "       'start_channel'],\n",
-       "      dtype='object')"
+       "id                                                                 900274491\n",
+       "beam_id                                                               455656\n",
+       "observation_id                                                         13232\n",
+       "tuning                                                                    AC\n",
+       "subband_offset                                                           640\n",
+       "file_uri                   /mnt/cosmic-storage-2/data1/vla_target/23A-362...\n",
+       "file_local_enumeration                                                    16\n",
+       "signal_frequency                                                43192.078426\n",
+       "signal_index                                                          373111\n",
+       "signal_drift_steps                                                         0\n",
+       "signal_drift_rate                                                        0.0\n",
+       "signal_snr                                                          9.672808\n",
+       "signal_coarse_channel                                                      0\n",
+       "signal_beam                                                                0\n",
+       "signal_num_timesteps                                                      16\n",
+       "signal_power                                                  593895030784.0\n",
+       "signal_incoherent_power                                       548789714944.0\n",
+       "source_name                                              3127348761205770496\n",
+       "fch1_mhz                                                         43192.07835\n",
+       "foff_mhz                                                            0.000002\n",
+       "tstart                                                          60212.560625\n",
+       "tsamp                                                               0.524288\n",
+       "ra_hours                                                            6.789733\n",
+       "dec_degrees                                                          3.27776\n",
+       "telescope_id                                                               0\n",
+       "num_timesteps                                                             16\n",
+       "num_channels                                                              79\n",
+       "coarse_channel                                                             0\n",
+       "start_channel                                                         373071\n",
+       "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_df.columns"
+    "print(test_df.iloc[1].file_uri)\n",
+    "test_df.iloc[1]"
    ]
   },
   {
@@ -208,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
