Save work from Friday last week

--- a/frequency_adjacency/making_filters.ipynb
+++ b/frequency_adjacency/making_filters.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -82,6 +89,96 @@
     "    sources.append(file.split('_')[0])\n",
     "\n",
     "sources_data = np.array(sources_data, dtype='object')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coherent Filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On source 2535280716217508992\n",
+      "On source 2536546185381558272\n",
+      "On source 2542485953354555264\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply filter one\n",
+    "# Extend COSMIC's ability to detect zero drift rate RFI\n",
+    "# Removes hits from a single target which are at exactly the same frequency as other hits \n",
+    "# from that target and where all the hits detected at that frequency have a zero drift rate\n",
+    "# Parameters:\n",
+    "# - coherent: The df of coherent data\n",
+    "# Returns the ids of the hits which pass the filter\n",
+    "def filter1(coherent):\n",
+    "    # What we're going to return\n",
+    "    good_ids = np.array([]) # Place to store all the good ids we find\n",
+    "    \n",
+    "    # Filter by each source\n",
+    "    sources = coherent.groupby(\"source_name\")\n",
+    "    for source_name, source in sources:\n",
+    "        print(\"On source\", source_name)\n",
+    "        source_good_ids = np.array([]) # Put all the good ids from this source\n",
+    "        \n",
+    "        # Put things into groups of frequencies which are *exactly* the same\n",
+    "        groups = source.groupby(\"signal_frequency\")\n",
+    "        for f, group in groups:\n",
+    "            # Let through those with no exact collisions in frequency\n",
+    "            if len(group) == 1:\n",
+    "                source_good_ids = np.concatenate((source_good_ids, group.id.values))\n",
+    "            else:\n",
+    "                # See if this group has signals with drift rates other than zero,\n",
+    "                # they pass this filter as well\n",
+    "                if 0 not in group.signal_drift_rate.values:\n",
+    "                    source_good_ids = np.concatenate((source_good_ids, group.id.values))\n",
+    "        good_ids = np.concatenate((good_ids, source_good_ids))\n",
+    "\n",
+    "    return good_ids\n",
+    "\n",
+    "filter1(coherent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "900273191"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "sources = coherent.groupby(\"source_name\")\n",
+    "first_source = sources.get_group(coherent.source_name.iloc[0])\n",
+    "groups = first_source.groupby(\"signal_frequency\")\n",
+    "group = groups.get_group(coherent.signal_frequency.iloc[1])\n",
+    "group.id.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All data filters"
    ]
   },
   {
