Create and run filters

--- a/frequency_adjacency/find_adjacent_frequencies_in_sources.ipynb
+++ b/frequency_adjacency/find_adjacent_frequencies_in_sources.ipynb
@@ -167,7 +167,7 @@
     "        \n",
     "        # Save results to file\n",
     "        save_npz(distances_file_path, csr_array(distances))\n",
-    "        save_npz(mask_file_path, csr_array(mask))dd"
+    "        save_npz(mask_file_path, csr_array(mask))"
    ]
   }
  ],
