--- a/pca_exploration/pca_single_time_reduced.ipynb
+++ b/pca_exploration/pca_single_time_reduced.ipynb
@@ -659,23 +659,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_81387/3501143288.py:56: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
-      "  frames.append(imageio.imread(filename))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Animated GIF saved: /home/nstieg/BL-COSMIC-2024-proj/pca_exploration/3d_scatter_frames/3d_scatter_rotation.gif\n",
-      "Cleaned up the remaining .pngs\n"
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 50\u001b[0m\n\u001b[1;32m     48\u001b[0m angles \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m360\u001b[39m, \u001b[38;5;241m5\u001b[39m)  \u001b[38;5;66;03m# Angles from 0 to 355 (360 degrees in steps of 5)\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, angle \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(angles):\n\u001b[0;32m---> 50\u001b[0m     \u001b[43mplot_with_angle\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mangle\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Create a list of frames\u001b[39;00m\n\u001b[1;32m     53\u001b[0m frames \u001b[38;5;241m=\u001b[39m []\n",
+      "Cell \u001b[0;32mIn[1], line 9\u001b[0m, in \u001b[0;36mplot_with_angle\u001b[0;34m(elev, azim)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplot_with_angle\u001b[39m(elev, azim):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# Setup figure\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m     fig \u001b[38;5;241m=\u001b[39m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[1;32m     10\u001b[0m     ax \u001b[38;5;241m=\u001b[39m fig\u001b[38;5;241m.\u001b[39madd_subplot(\u001b[38;5;241m111\u001b[39m, projection\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m3d\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m     ax\u001b[38;5;241m.\u001b[39mview_init(elev\u001b[38;5;241m=\u001b[39melev, azim\u001b[38;5;241m=\u001b[39mazim)  \u001b[38;5;66;03m# Change elevation (vertical angle) and azimuth (horizontal angle)\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
      ]
     }
    ],
@@ -721,6 +717,7 @@
     "        os.remove(filename)\n",
     "    plt.savefig(filename)\n",
     "    plt.close(fig)\n",
+    "    \n",
     "# Create a directory to store frames\n",
     "path = \"/home/nstieg/BL-COSMIC-2024-proj/pca_exploration/3d_scatter_frames\"\n",
     "if not os.path.exists(path):\n",
