--- a/stamps/find_high_antennna_power_stamp.ipynb
+++ b/stamps/find_high_antennna_power_stamp.ipynb
@@ -22,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "kj/filesystem-disk-unix.c++:1703: warning: PWD environment variable doesn't match current directory; pwd = /home/nstiegle\n"
+     ]
+    }
+   ],
    "source": [
     "# Next we'll import the seticore viewer package: \n",
     "# Unfortunately, it can be a little fiddley\n",
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,14 +116,6 @@
      "output_type": "stream",
      "text": [
       "Found: 49 stamps\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nstiegle/miniforge3/envs/stamp_viewer/lib/python3.7/site-packages/seticore/viewer.py:125: H5pyDeprecationWarning: The default file mode will change to 'r' (read-only) in h5py 3.0. To suppress this warning, pass the mode you need to h5py.File(), or set the global default h5.get_config().default_file_mode, or set the environment variable H5PY_DEFAULT_READONLY=1. Available modes are: 'r', 'r+', 'w', 'w-'/'x', 'a'. See the docs for details.\n",
-      "  self.h5 = h5py.File(filepath)\n"
      ]
     }
    ],
@@ -150,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +214,7 @@
        "(16, 524, 2, 21, 2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +410,7 @@
        "Text(0, 0.5, 'Count of Antennas with Strength')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -442,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +472,7 @@
        "(array([12]), 7293.226621695599)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -589,13 +580,7 @@
      "output_type": "stream",
      "text": [
       "Stamps 0 has single-antenna RFI on antenna(s) [12] with a threshold of 7293.226621695599 above signals in other antennas\n",
-      "Stamps 1 has single-antenna RFI on antenna(s) [20] with a threshold of 788.8552040978744 above signals in other antennas\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Stamps 1 has single-antenna RFI on antenna(s) [20] with a threshold of 788.8552040978744 above signals in other antennas\n",
       "Stamps 2 has single-antenna RFI on antenna(s) [13] with a threshold of 847.9269436269949 above signals in other antennas\n",
       "Stamps 3 has single-antenna RFI on antenna(s) [11] with a threshold of 632.6049670049789 above signals in other antennas\n",
       "Stamps 4 has single-antenna RFI on antenna(s) [15] with a threshold of 384.5748005454857 above signals in other antennas\n",
@@ -651,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,17 +1024,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False, False, True, True, True, True, True, True, True, True, True, True, True, True, True, True, False, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xaxis_1 = np.linspace(1.0001, 30, 100)\n",
     "yaxis_1 = []\n",
@@ -1216,6 +1193,80 @@
     "plt.ylabel(\"Success? (1 means success)\")\n",
     "plt.title(\"Method 2\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure out what antenna actually corresponded with the ids of the antennas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stamp 0 had SARFI on ea28 at 43255.57592190021MHz\n",
+      "Stamp 1 had SARFI on ea20 at 43255.79166973346MHz\n",
+      "Stamp 2 had SARFI on ea15 at 43255.5983198952MHz\n",
+      "Stamp 3 had SARFI on ea07 at 43255.54647052997MHz\n",
+      "Stamp 4 had SARFI on ea26 at 43255.65711010211MHz\n",
+      "Stamp 5 had SARFI on ea08 at 43255.38747776263MHz\n",
+      "Stamp 6 had SARFI on ea17 at 43255.52046573871MHz\n",
+      "Stamp 7 had SARFI on ea23 at 43256.30264461749MHz\n",
+      "Stamp 8 had SARFI on ea04 at 43255.49670398944MHz\n",
+      "Stamp 9 had SARFI on ea01 at 43255.47007358783MHz\n",
+      "Stamp 10 had SARFI on ea09 at 43255.70028675311MHz\n",
+      "Stamp 11 had SARFI on ea26 at 43255.67547405475MHz\n",
+      "Stamp 12 had SARFI on ea20 at 43255.78209865802MHz\n",
+      "Stamp 13 had SARFI on ea18 at 43255.65147197955MHz\n",
+      "Stamp 14 had SARFI on ea19 at 43256.36075199359MHz\n",
+      "Stamp 15 had SARFI on ea24 at 43255.722200281554MHz\n",
+      "Stamp 16 had SARFI on ea24 at 43255.7106283974MHz\n",
+      "Stamp 17 had SARFI on ea04 at 43255.48649013751MHz\n",
+      "Stamp 18 had SARFI on ea03 at 43255.769145853454MHz\n",
+      "Stamp 19 had SARFI on ea15 at 43255.587655908996MHz\n",
+      "Stamp 20 had SARFI on ea17 at 43255.51040828937MHz\n",
+      "Stamp 21 had SARFI on ea22 at 43255.7423609566MHz\n",
+      "Stamp 22 had SARFI on ea24 at 43255.71294773334MHz\n",
+      "Stamp 23 had SARFI on ea16 at 43256.166770822936MHz\n",
+      "Stamp 24 had SARFI on ea09 at 43255.68989742511MHz\n",
+      "Stamp 25 had SARFI on ea28 at 43255.567762262755MHz\n",
+      "Stamp 26 had SARFI on ea22 at 43255.740558512145MHz\n",
+      "Stamp 27 had SARFI on ea22 at 43255.74658001178MHz\n",
+      "Stamp 29 had SARFI on ea03 at 43255.75242031329MHz\n",
+      "Stamp 40 had SARFI on ea25 at 43287.24024952167MHz\n",
+      "Stamp 41 had SARFI on ea23 at 43287.29416073077MHz\n",
+      "Stamp 42 had SARFI on ea16 at 43287.157871134215MHz\n",
+      "Stamp 43 had SARFI on ea19 at 43287.339887506896MHz\n",
+      "Stamp 44 had SARFI on ea12 at 43287.2711714577MHz\n",
+      "Stamp 45 had SARFI on ea11 at 43287.06919658893MHz\n",
+      "Stamp 46 had SARFI on ea16 at 43287.15901363605MHz\n",
+      "Stamp 47 had SARFI on ea16 at 43287.166770822936MHz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print antenna names for each SARFI found\n",
+    "for index in range(len(stamp_indices_with_single_antennas)):\n",
+    "    # Get stamp\n",
+    "    stamp_index = stamp_indices_with_single_antennas[index]\n",
+    "    antenna_index = antenna_indices_within_stamp[index]\n",
+    "    stamp = stamps[stamp_index]\n",
+    "    assert(stamp.recipe is not None)\n",
+    "\n",
+    "    # Get the name of the bad antenna\n",
+    "    antenna_titles = [stamp.recipe.antenna_names[i] for i in range(stamp.stamp.numAntennas)]\n",
+    "    # antenna_nums = [int(title[2:]) for title in antenna_titles]\n",
+    "    antenna_title_of_SARFI = antenna_titles[antenna_index]\n",
+    "\n",
+    "    # Print info\n",
+    "    print(f\"Stamp {stamp_index} had SARFI on {antenna_title_of_SARFI} at {stamp.stamp.signal.frequency}MHz\")"
    ]
   },
   {
