--- a/stamps/look_at_stamps_which_pass_filter11.ipynb
+++ b/stamps/look_at_stamps_which_pass_filter11.ipynb
@@ -875,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
