After program commit from BLPC1

--- a/filters/making_filters.ipynb
+++ b/filters/making_filters.ipynb
@@ -427,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## All data filters"
+    "### Misc"
    ]
   },
   {
@@ -508,10 +508,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Look at a coherent/incoherent filter ratio\n",
+    "# c * sqrt(nants) > i\n",
+    "# c/i * sqrt(nants) > 1\n",
+    "# c/i > 1/sqrt(nants)\n",
+    "a = coherent.signal_power / coherent.signal_incoherent_power\n",
+    "good = a > 1/20\n",
+    "bad = a <= 1/20\n",
+    "bad.sum()"
+   ]
   }
  ],
  "metadata": {
