low-n stats and ~AAS poster figures

--- a/stamps/dedrift_signals.ipynb
+++ b/stamps/dedrift_signals.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "# Import packages needed\n",
+    "# Import packages needed stamp_viewer env\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
@@ -115,12 +115,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9073486328125e-06\n",
+      "0.524288\n",
+      "43255.90455616229\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stamp.stamp.foff)\n",
+    "print(stamp.stamp.tsamp)\n",
+    "print(stamp.stamp.fch1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "powers = stamp.beamform_power(0)\n",
     "frame = stg.Frame.from_data(stamp.stamp.foff * u.MHz, stamp.stamp.tsamp * u.s, stamp.stamp.fch1 * u.MHz, True, powers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16, 729)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(powers.shape)"
    ]
   },
   {
