--- a/messing_around/messing_around.ipynb
+++ b/messing_around/messing_around.ipynb
@@ -2830,7 +2830,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pulsar",
    "language": "python",
    "name": "python3"
   },
@@ -2844,7 +2844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
