more simulations as of 2/22

--- a/stats_of_low_n/sims/sim_dev.ipynb
+++ b/stats_of_low_n/sims/sim_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,26 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2511.9728446006775"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.4948000907898\n",
+      "50.244752407073975\n",
+      "25.119728446006775\n",
+      "12.55721652507782\n",
+      "6.275960564613342\n"
+     ]
     }
    ],
    "source": [
-    "210752871 / 2097152 # 4 ints\n",
-    "210741766 / 4194304 # 8\n",
-    "210719555 / 8388608 # 16 ints\n",
-    "210675134 / 16777216 # 32\n",
-    "210586292 / 33554432 # 64"
+    "print(210752871 / 2097152) # 4 ints\n",
+    "print(210741766 / 4194304) # 8\n",
+    "print(210719555 / 8388608) # 16 ints\n",
+    "print(210675134 / 16777216) # 32\n",
+    "print(210586292 / 33554432) # 64"
    ]
   },
   {
@@ -287,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
